<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jointclock.yorkapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.jointclock.yorkapp.ui.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.jointclock.yorkapp.ui.emergency.EmergencyFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_emergency" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.jointclock.yorkapp.ui.myevents.MyEventsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_myevents" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.jointclock.yorkapp.ui.LogoutFragment"
        android:label="@string/menu_share"
        />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.jointclock.yorkapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>